--- a/style.css
+++ b/style.css
@@ -12,11 +12,18 @@ body {
     height: 100vh;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 h1 {
     font-size: 2.5rem;
     font-weight:300;
     margin-bottom: 50px;
     text-align: center;
+}
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .container {
@@ -26,7 +33,7 @@ h1 {
     background-color: rgba(211, 211, 211, 0.4);
     padding: 30px;
     margin-top: 30px;
-    width: 60vw;
+    width: max(60vw, 100%);
     display: flex;
     justify-content: space-between;
     align-items: center;
